@@ -27,6 +27,7 @@
 21. Parse more fields from CUE files.
 22. Fix image requests when using composers.
 23. Load Various Artist image, if found.
+24. If no lyrics found, create initial file when asked to edit.
 
 2.3.3
 -----
